[FIX] Filters now are collapsed to 5 visible with 'Show more/show less' button if more then 5 filters available

--- a/website_product_filters/static/src/less/filters.less
+++ b/website_product_filters/static/src/less/filters.less
@@ -2,12 +2,19 @@
   .hidden {
     display: none;
   }
-.panel {
+  .panel {
     margin: 0px;
-}
-.panel-body {
+  }
+  .panel-body {
     padding-top: 5px;
-}
+    padding-bottom: 5px;
+  }
+  .panel-heading {
+    padding: 5px 12px;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: -1px;
+    border-top-left-radius: -1px;
+  }
 }
 .yoytec-input {
    height: 32px;
@@ -29,3 +36,4 @@
     padding-left: 0px;
     padding-right: 0px;
 }
+
